--- a/style/main.css
+++ b/style/main.css
@@ -96,23 +96,21 @@ h1{
     color: black;
     text-align: center;
     margin-top: 36px;
-    padding: 15px;
+    padding: 15px 0px;
     width: 100%;
     height: 51px;
     background: #01DFD7;
     font-family: "Mystery Quest", cursive;
 }
 section{
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
-    margin-left: 20px;
+    width: 1355px;
+    margin: auto;
 }
 section article{
     width: 205px;
     height: 325px;
     position: relative;
-    margin: 40px 65px;
+    margin: 40px 60px;
     display: inline-block;
     overflow: hidden;
 }
@@ -172,8 +170,8 @@ section article:hover div{
     opacity: 1;
 }
 .ac{
-    width: 100%;
-    height: 100%;
+    width: 1348px;
+    margin: auto;
 }
 .ac nav{
     width: 250px;
@@ -199,7 +197,7 @@ section article:hover div{
     margin: auto;
     width: 250px;
     height: 370px; 
-    background-color: aqua;
+    background-color: rgba(66, 68, 68, 0.8);
     transform: scale(0);
     transition-property: transform;
     transition-duration: 1s;
@@ -211,7 +209,7 @@ section article:hover div{
 .ac nav .action h2{
     font-size: 20px;
     margin: 5px;
-    color: black;
+    color: white;
     transform: translate(20px,-20px) ;
     transition-duration: .3s;
     transition-delay: 1.5s;
@@ -225,7 +223,7 @@ section article:hover div{
 .ac nav .action p{
     text-align: justify;
     padding: 25px;
-    color: black;
+    color: white;
     font-size: 20px;
     transform: translateX(-100px);
     transition-duration: .3s;
@@ -243,7 +241,7 @@ section article:hover div{
     margin: 0px 70px;
     color: black;
     border: 1px solid black;
-    background: yellow;
+    background: aqua;
     font-size: 15px;
     opacity: 0;
     transition-duration: .5s;
@@ -254,8 +252,8 @@ section article:hover div{
     opacity: 1;
 }
 .co{
-    width: 100%;
-    height: 100%;
+    width: 1348px;
+    margin: auto;
 }
 .co nav{
     width: 250px;
@@ -280,7 +278,7 @@ section article:hover div{
     margin: auto;
     width: 250px;
     height: 370px; 
-    background-color:aqua;
+    background-color:rgba(66, 68, 68, 0.8);
     transform: scale(0);
     transition-property: transform;
     transition-duration: 1s;
@@ -292,7 +290,7 @@ section article:hover div{
 .co nav .comedy h2{
     font-size: 20px;
     margin: 5px;
-    color: black;
+    color: white;
     transform: translate(20px,-20px) ;
     transition-duration: .3s;
     transition-delay: 1.5s;
@@ -306,7 +304,7 @@ section article:hover div{
 .co nav .comedy p{
     text-align: justify;
     padding: 25px;
-    color: black;
+    color: white;
     font-size: 20px;
     transform: translateX(-100px);
     transition-duration: .3s;
@@ -324,7 +322,7 @@ section article:hover div{
     margin: 0px 70px;
     color: black;
     border: 1px solid black;
-    background: yellow;
+    background: aqua;
     font-size: 15px;
     opacity: 0;
     transition-duration: .5s;
@@ -335,8 +333,8 @@ section article:hover div{
     opacity: 1;
 }
 .fi{
-    width: 100%;
-    height: 100%;
+    width: 1348px;
+    margin: auto;
 }
 .fi nav{
     width: 250px;
@@ -361,7 +359,7 @@ section article:hover div{
     margin: auto;
     width: 250px;
     height: 370px; 
-    background-color:aqua;
+    background-color:rgba(66, 68, 68, 0.8);
     transform: scale(0);
     transition-property: transform;
     transition-duration: 1s;
@@ -374,7 +372,7 @@ section article:hover div{
     font-size: 20px;
     text-align: center;
     margin: 5px;
-    color: black;
+    color: white;
     transform: translate(20px,-20px) ;
     transition-duration: .3s;
     transition-delay: 1.5s;
@@ -388,7 +386,7 @@ section article:hover div{
 .fi nav .fiction p{
     text-align: justify;
     padding: 25px;
-    color: black;
+    color: white;
     font-size: 20px;
     transform: translateX(-100px);
     transition-duration: .3s;
@@ -406,7 +404,7 @@ section article:hover div{
     margin: 0px 70px;
     color: black;
     border: 1px solid black;
-    background: yellow;
+    background: aqua;
     font-size: 15px;
     opacity: 0;
     transition-duration: .5s;
@@ -417,8 +415,8 @@ section article:hover div{
     opacity: 1;
 }
 .in{
-    width: 100%;
-    height: 100%;
+    width: 1348px;
+    margin: auto;
 }
 .in nav{
     width: 250px;
@@ -443,7 +441,7 @@ section article:hover div{
     margin: auto;
     width: 250px;
     height: 370px; 
-    background-color:aqua;
+    background-color: rgba(66, 68, 68, 0.8);
     transform: scale(0);
     transition-property: transform;
     transition-duration: 1s;
@@ -456,7 +454,7 @@ section article:hover div{
     font-size: 20px;
     text-align: center;
     margin: 5px;
-    color: black;
+    color: white;
     transform: translate(20px,-20px) ;
     transition-duration: .3s;
     transition-delay: 1.5s;
@@ -470,7 +468,7 @@ section article:hover div{
 .in nav .child p{
     text-align: justify;
     padding: 25px;
-    color: black;
+    color: white;
     font-size: 20px;
     transform: translateX(-100px);
     transition-duration: .3s;
@@ -488,7 +486,7 @@ section article:hover div{
     margin: 0px 70px;
     color: black;
     border: 1px solid black;
-    background: yellow;
+    background: aqua;
     font-size: 15px;
     opacity: 0;
     transition-duration: .5s;
@@ -499,8 +497,8 @@ section article:hover div{
     opacity: 1;
 }
 .ro{
-    width: 100%;
-    height: 100%;
+    width: 1348px;
+    margin: auto;
 }
 .ro nav{
     width: 250px;
@@ -525,7 +523,7 @@ section article:hover div{
     margin: auto;
     width: 250px;
     height: 370px; 
-    background-color:aqua;
+    background-color: rgba(66, 68, 68, 0.8);
     transform: scale(0);
     transition-property: transform;
     transition-duration: 1s;
@@ -538,7 +536,7 @@ section article:hover div{
     font-size: 20px;
     text-align: center;
     margin: 5px;
-    color: black;
+    color: white;
     transform: translate(20px,-20px) ;
     transition-duration: .3s;
     transition-delay: 1.5s;
@@ -552,7 +550,7 @@ section article:hover div{
 .ro nav .romance p{
     text-align: justify;
     padding: 25px;
-    color: black;
+    color: white;
     font-size: 20px;
     transform: translateX(-100px);
     transition-duration: .3s;
@@ -570,7 +568,7 @@ section article:hover div{
     margin: 0px 70px;
     color: black;
     border: 1px solid black;
-    background: yellow;
+    background: aqua;
     font-size: 15px;
     opacity: 0;
     transition-duration: .5s;
@@ -581,8 +579,8 @@ section article:hover div{
     opacity: 1;
 }
 .te{
-    width: 100%;
-    height: 100%;
+    width: 1348px;
+    margin: auto;
 }
 .te nav{
     width: 250px;
@@ -607,7 +605,7 @@ section article:hover div{
     margin: auto;
     width: 250px;
     height: 370px; 
-    background-color:aqua;
+    background-color:rgba(66, 68, 68, 0.8);
     transform: scale(0);
     transition-property: transform;
     transition-duration: 1s;
@@ -620,7 +618,7 @@ section article:hover div{
     font-size: 20px;
     text-align: center;
     margin: 5px;
-    color: black;
+    color: white;
     transform: translate(20px,-20px) ;
     transition-duration: .3s;
     transition-delay: 1.5s;
@@ -634,7 +632,7 @@ section article:hover div{
 .te nav .terror p{
     text-align: justify;
     padding: 25px;
-    color: black;
+    color: white;
     font-size: 20px;
     transform: translateX(-100px);
     transition-duration: .3s;
@@ -652,7 +650,7 @@ section article:hover div{
     margin: 0px 70px;
     color: black;
     border: 1px solid black;
-    background: yellow;
+    background: aqua;
     font-size: 15px;
     opacity: 0;
     transition-duration: .5s;
@@ -699,46 +697,69 @@ footer{
     position: relative;
     top: 20px;
     width: 100%;
-    height: 200px;
+    height: 170px;
     background-color: #01DFD7;
 }
 footer img:nth-child(1){
     position: absolute;
     width: 80px;
     height: 80px;
-    top: 10px;
+    top: 22px;
     left: 545px;
     object-fit: cover;
+    cursor: pointer;
+    transition-property: all;
+    transform: scale(1);
+    transition-delay: 0s;
+    transition-duration: 1s;
 }
 footer img:nth-child(2){
     position: absolute;
     width: 80px;
     height: 80px;
-    top: 10px;
+    top: 22px;
     left: 630px;
     object-fit: cover;
+    cursor: pointer;
+    transition-property: all;
+    transform: scale(1);
+    transition-delay: 0s;
+    transition-duration: 1s;
 }
 footer img:nth-child(3){
     position: absolute;
     width: 80px;
     height: 80px;
-    top: 10px;
+    top: 22px;
     right:630px;
     object-fit: cover;
+    cursor: pointer;
+    transition-property: all;
+    transform: scale(1);
+    transition-delay: 0s;
+    transition-duration: 1s;
 }
 footer img:nth-child(4){
     position: absolute;
     width: 80px;
     height: 80px;
-    top: 10px;
+    top: 22px;
     right: 545px;
     object-fit: cover;
+    cursor: pointer;
+    transition-property: all;
+    transform: scale(1);
+    transition-delay: 0s;
+    transition-duration: 1s;
 }
 footer h5{
     position: relative;
-    top: 130px;
+    top: 120px;
     left: auto;
     right: auto;
     text-align: center;
     font-family: "Mystery Quest", cursive;
+}
+footer img:hover{
+    transform: scale(1.3);
 }
